[tool.poetry]
name = "lmsdemoapp"
version = "0.1.0"
description = ""
authors = ["starkcodex <maneeshemn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.3"
fastapi = "^0.111.1"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
